2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key.c: Fix crasher on amd64 with negative
    array indexes. Patch by Sebastian Dröge. Fixes #352808
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-ssh-key-data.c: 
    * libseahorse/seahorse-ssh-key-data.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-source.c: 
    Also standardize internal SSH key ids on last 16 upper case 
    hex chars of fingerprint similar to PGP key ids.
    
2006-08-27  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-pgp-encrypted.desktop.in: Add application/pgp to the 
    list of mimetypes we handle. 
    
2006-08-27  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-secure-entry.c: Change the default 
    invisible char to a bullet. [Jose Carlos Garcia Sogo]
    
2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-ssh-key.c: Fix compile warnings
    
2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-ssh-key.c:
    * libseahorse/seahorse-unknown-key.c:
    * src/seahorse-key-manager-store.c: Validity now displayed per UID. 
    Fixes #351836
    
2006-08-26  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-pgp-key.c
    * libseahorse/seahorse-validity.c:
    * libseahorse/seahorse-validity.h: Display proper validity. Fixes #351835

2006-08-25  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-ssh-key-data.c:
    * libseahorse/seahorse-ssh-key-data.h:
    * libseahorse/seahorse-ssh-operation.c:
    * libseahorse/seahorse-ssh-operation.h:
    * libseahorse/seahorse-ssh-key-properties.c:
    * libseahorse/seahorse-ssh-key-properties.glade: Allow 'renaming' of 
    SSH keys. Fixes #352868
    
2006-08-24  Nate Nielsen  <nielsen@memberwebs.com>
