@@ -1,5 +1,10 @@
 2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-ssh-operation.c: Cancel operation when 
+    SSH password prompt is cancelled. 
+    
+2006-08-28  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-ssh-key.c: Fix crasher on amd64 with negative
     array indexes. Patch by Sebastian Dröge. Fixes #352808
     * libseahorse/seahorse-ssh-key.c:
